Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35731

Assertion `(mem_root->flags & 4) == 0' failed upon 2nd execution of CHECK TABLE with FK

    XMLWordPrintable

Details

    Description

      --source include/have_innodb.inc
       
      CREATE TABLE t (a INT) ENGINE=InnoDB;
      SET FOREIGN_KEY_CHECKS = OFF;
      ALTER TABLE t ADD FOREIGN KEY (a) REFERENCES x(x);
      SET FOREIGN_KEY_CHECKS = ON;
      PREPARE stmt FROM 'CHECK TABLE t EXTENDED';
      EXECUTE stmt;
      EXECUTE stmt;
       
      DROP TABLE t;
      

      bb-11.8-check-table 01b0c6c996db756fc40d51178d669fcfbec7a1d7

      mariadbd: /data/bld/preview-11.8-bb-11.8-check-table-asan/mysys/my_alloc.c:275: alloc_root: Assertion `(mem_root->flags & 4) == 0' failed.
      241229  1:02:22 [ERROR] mysqld got signal 6 ;
       
      #9  0x00007f6818a53e32 in __GI___assert_fail (assertion=0x55e12879fc80 "(mem_root->flags & 4) == 0", file=0x55e12879f760 "/data/bld/preview-11.8-bb-11.8-check-table-asan/mysys/my_alloc.c", line=275, function=0x55e1287a0180 <__PRETTY_FUNCTION__.1> "alloc_root") at ./assert/assert.c:101
      #10 0x000055e12729971b in alloc_root (mem_root=0x6190000ca228, length=9) at /data/bld/preview-11.8-bb-11.8-check-table-asan/mysys/my_alloc.c:275
      #11 0x000055e12729be92 in strmake_root (root=0x6190000ca228, str=0x61600094bd9d "t_ibfk_1", len=8) at /data/bld/preview-11.8-bb-11.8-check-table-asan/mysys/my_alloc.c:668
      #12 0x000055e1250e08fc in Query_arena::strmake (this=0x62c0001e0230, str=0x61600094bd9d "t_ibfk_1", size=8) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_class.h:1287
      #13 0x000055e12525245d in thd_strmake (thd=0x62c0001e0218, str=0x61600094bd9d "t_ibfk_1", size=8) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_class.cc:1211
      #14 0x000055e1267c125d in Lex_cstring::set_dup (this=0x7f6809b35af0, thd=0x62c0001e0218, ptr=0x61600094bd9d "t_ibfk_1", len=8) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/lex_string.h:136
      #15 0x000055e1267c12f1 in Lex_cstring::set_dup (this=0x7f6809b35af0, thd=0x62c0001e0218, ptr=0x61600094bd9d "t_ibfk_1") at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/lex_string.h:142
      #16 0x000055e1267a394d in get_foreign_key_info (thd=0x62c0001e0218, foreign=0x61600094bd20) at /data/bld/preview-11.8-bb-11.8-check-table-asan/storage/innobase/handler/ha_innodb.cc:15430
      #17 0x000055e1267a4d87 in ha_innobase::get_foreign_key_list (this=0x61d00030a2b8, thd=0x62c0001e0218, f_key_list=0x7f6809b361d0) at /data/bld/preview-11.8-bb-11.8-check-table-asan/storage/innobase/handler/ha_innodb.cc:15567
      #18 0x000055e1251f66d3 in Check_table_prelocking_strategy::handle_table (this=0x7f6809b36bb0, thd=0x62c0001e0218, prelocking_ctx=0x62d0002da450, tables=0x62d0002dc2c0, need_prelocking=0x7f6809b36340) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_base.cc:5205
      #19 0x000055e1251ef4e6 in extend_table_list (thd=0x62c0001e0218, tables=0x62d0002dc2c0, prelocking_strategy=0x7f6809b36bb0, has_prelocking_list=false) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_base.cc:3930
      #20 0x000055e1251f0e3b in open_and_process_table (thd=0x62c0001e0218, tables=0x62d0002dc2c0, counter=0x7f6809b36760, flags=0, prelocking_strategy=0x7f6809b36bb0, has_prelocking_list=false, ot_ctx=0x7f6809b36650) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_base.cc:4236
      #21 0x000055e1251f358e in open_tables (thd=0x62c0001e0218, options=..., start=0x7f6809b36770, counter=0x7f6809b36760, flags=0, prelocking_strategy=0x7f6809b36bb0) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_base.cc:4662
      #22 0x000055e1251f9056 in open_and_lock_tables (thd=0x62c0001e0218, options=..., tables=0x62d0002dc2c0, derived=true, flags=0, prelocking_strategy=0x7f6809b36bb0) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_base.cc:5682
      #23 0x000055e1258c438d in open_and_lock_tables (thd=0x62c0001e0218, tables=0x62d0002dc2c0, derived=true, flags=0, prelocking_strategy=0x7f6809b36bb0) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_base.h:286
      #24 0x000055e1258c65aa in open_only_one_table (thd=0x62c0001e0218, table=0x62d0002dc2c0, repair_table_use_frm=false, is_view_operator_func=true, prelock_strategy=0x7f6809b36bb0) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_admin.cc:439
      #25 0x000055e1258c795d in mysql_admin_table (thd=0x62c0001e0218, tables=0x62d0002dc2c0, check_opt=0x62d0002db870, operator_name=0x55e128dfaba0 <msg_check>, lock_type=TL_READ_NO_INSERT, org_open_for_modify=false, no_errors_from_open=false, extra_open_options=32, prepare_func=0x0, operator_func=(int (handler::*)(handler * const, THD *, HA_CHECK_OPT *)) 0x55e125d597c8 <handler::ha_check(THD*, st_ha_check_opt*)>, view_operator_func=0x55e1257742cf <view_check(THD*, TABLE_LIST*, st_ha_check_opt*)>, is_cmd_replicated=false) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_admin.cc:654
      #26 0x000055e1258cff10 in Sql_cmd_check_table::execute (this=0x62d0002dc9f0, thd=0x62c0001e0218) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_admin.cc:1652
      #27 0x000055e1253b920b in mysql_execute_command (thd=0x62c0001e0218, is_called_from_prepared_stmt=true) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_parse.cc:5872
      #28 0x000055e12545a412 in Prepared_statement::execute (this=0x6190000c9e98, expanded_query=0x7f6809b395f0, open_cursor=false) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_prepare.cc:5051
      #29 0x000055e125455375 in Prepared_statement::execute_loop (this=0x6190000c9e98, expanded_query=0x7f6809b395f0, open_cursor=false, packet=0x0, packet_end=0x0) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_prepare.cc:4428
      #30 0x000055e12544e82e in mysql_sql_stmt_execute (thd=0x62c0001e0218) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_prepare.cc:3447
      #31 0x000055e1253ab613 in mysql_execute_command (thd=0x62c0001e0218, is_called_from_prepared_stmt=false) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_parse.cc:3982
      #32 0x000055e1253c622a in mysql_parse (thd=0x62c0001e0218, rawbuf=0x6290000fa238 "EXECUTE stmt", length=12, parser_state=0x7f6809b3aa30) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_parse.cc:7901
      #33 0x000055e12539d36b in dispatch_command (command=COM_QUERY, thd=0x62c0001e0218, packet=0x629000280219 "", packet_length=12, blocking=true) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_parse.cc:1903
      #34 0x000055e12539a073 in do_command (thd=0x62c0001e0218, blocking=true) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_parse.cc:1416
      #35 0x000055e12588cb63 in do_handle_one_connection (connect=0x608000004438, put_in_cache=true) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_connect.cc:1415
      #36 0x000055e12588c6c2 in handle_one_connection (arg=0x6080000043b8) at /data/bld/preview-11.8-bb-11.8-check-table-asan/sql/sql_connect.cc:1327
      #37 0x000055e12653810c in pfs_spawn_thread (arg=0x617000008218) at /data/bld/preview-11.8-bb-11.8-check-table-asan/storage/perfschema/pfs.cc:2198
      #38 0x00007f6818aa8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #39 0x00007f6818b2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Not reproducible on the baseline.

      Attachments

        Issue Links

          Activity

            People

              pranav.tiwari@mariadb.com Pranav Kumar Tiwari
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Time Spent - 1.25d Remaining Estimate - 1h
                  1h
                  Logged:
                  Time Spent - 1.25d Remaining Estimate - 1h
                  1.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.