MDEV-35731 Assertion `(mem_root->flags & 4) == 0' failed upon 2nd exec of CHECK

... TABLE with FK

The normal order of things in prepared statement is:
1. open tables during prepare
2. use them during all the executions

Currently, tables are opened in the body of CHECK TABLE's execution part.
This is motivated by the nature of this statement: we have to run the checks for
all the tables specified in the list, event if some of them fail to open.

Rewriting it as in normal order is possible, but is out of scope of this task.

That is, we shouldn't activate stmt_arena when constructing the referential
tables list.

It's not enough, since the next statement execution will try to reuse all the
TABLE_LIST's in lex->query_list, but the referential tables are allocated on the
normal query arena, so they should be cleaned up from that list.

Given how specific the open_only_one_table work is, we only have to re-link
table lists as they were before the tables are opened. It's enough to just
assign next_local to next_global for each table specified by
user, i.e. in lex->first_select_lex().

lex->query_tables_last and other lex fields are already maintained by that
function.

Base task: MDEV-34309